@@ -3,12 +3,11 @@ package ru.kata.spring.boot_security.demo.initiation;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationListener;
 import org.springframework.context.event.ContextRefreshedEvent;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 import ru.kata.spring.boot_security.demo.models.Role;
 import ru.kata.spring.boot_security.demo.models.User;
-import ru.kata.spring.boot_security.demo.repositories.RoleRepository;
-import ru.kata.spring.boot_security.demo.repositories.UserRepository;
+import ru.kata.spring.boot_security.demo.services.RoleService;
+import ru.kata.spring.boot_security.demo.services.UserService;
 
 import java.util.Arrays;
 import java.util.List;
@@ -16,55 +15,40 @@ import java.util.List;
 @Component
 public class DatabaseInitializer implements ApplicationListener<ContextRefreshedEvent> {
 
-    private RoleRepository roleRepository;
-    private UserRepository userRepository;
-    private PasswordEncoder passwordEncoder;
+    private final RoleService roleService;
+    private final UserService userService;
 
     @Autowired
-    public DatabaseInitializer(UserRepository userRepository, RoleRepository roleRepository, PasswordEncoder passwordEncoder) {
-        this.userRepository = userRepository;
-        this.roleRepository = roleRepository;
-        this.passwordEncoder = passwordEncoder;
+    public DatabaseInitializer(RoleService roleService, UserService userService) {
+        this.roleService = roleService;
+        this.userService = userService;
     }
 
     @Override
     public void onApplicationEvent(ContextRefreshedEvent event) {
-
         //Создали роль юзер
         Role userRole = new Role();
         userRole.setRole("ROLE_USER");
-        roleRepository.save(userRole);
+        roleService.save(userRole);
 
         //Создали роль админ
         Role adminRole = new Role();
         adminRole.setRole("ROLE_ADMIN");
-        roleRepository.save(adminRole);
+        roleService.save(adminRole);
 
-        List<Role> userRoles = Arrays.asList(userRole);
+        List<Role> userRoles = List.of(userRole);
         List<Role> adminRoles = Arrays.asList(adminRole, userRole);
 
         User admin = new User();
         admin.setUsername("admin");
-        admin.setPassword(passwordEncoder.encode("admin"));
+        admin.setPassword("admin");
         admin.setRoles(adminRoles);
-        userRepository.save(admin);
+        userService.save(admin);
 
         User user = new User();
         user.setUsername("user");
-        user.setPassword(passwordEncoder.encode("user"));
+        user.setPassword("user");
         user.setRoles(userRoles);
-        userRepository.save(user);
-
-        User user2 = new User();
-        user.setUsername("user2");
-        user.setPassword(passwordEncoder.encode("user2"));
-        user.setRoles(userRoles);
-        userRepository.save(user2);
-
-        User user3 = new User();
-        user.setUsername("user3");
-        user.setPassword(passwordEncoder.encode("user3"));
-        user.setRoles(userRoles);
-        userRepository.save(user3);
+        userService.save(user);
     }
 }
